# openclaw-skills

./: .env.production.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  mypy.ini  opencode.json  pyproject.toml
apps/compras_divididas/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/compras_divididas/alembic/: env.py
apps/compras_divididas/alembic/versions/: 001_initial_core_tables.py  002_create_financial_core.py  003_seed_default_participants.py  004_add_recurrence_rules.py  20260211_01_add_recurrence_tables.py
apps/compras_divididas/scripts/: entrypoint.sh
apps/compras_divididas/src/compras_divididas/: __init__.py  cli.py  skill.py
apps/compras_divididas/src/compras_divididas/api/: __init__.py  app.py  dependencies.py  error_handlers.py  monthly_closures.py
apps/compras_divididas/src/compras_divididas/application/: __init__.py
apps/compras_divididas/src/compras_divididas/core/: settings.py
apps/compras_divididas/src/compras_divididas/db/: base.py  session.py
apps/compras_divididas/src/compras_divididas/domain/: __init__.py  competence.py  errors.py  money.py  recurrence_schedule.py  value_objects.py
apps/compras_divididas/src/compras_divididas/infrastructure/: __init__.py  settings.py
apps/compras_divididas/src/compras_divididas/mcp/: __init__.py  (+1 more)
apps/compras_divididas/tests/: conftest.py
apps/compras_divididas/tests/contract/: test_create_monthly_closure.py  test_create_movement.py  test_create_recurrence.py  test_generate_recurrences.py  test_get_latest_monthly_closure.py  test_get_monthly_closure_by_id.py  test_get_monthly_report.py  test_get_monthly_summary.py  test_health_endpoints.py  test_list_movements.py  test_list_participants.py  test_list_recurrences.py  test_update_recurrence.py  test_update_recurrence_status.py
apps/compras_divididas/tests/integration/: test_classification_pipeline.py  test_close_month_happy_path.py  test_create_movement_flow.py  test_detailed_report.py  test_monthly_report.py  test_monthly_summary.py  test_performance_budget.py  test_recurrence_create_and_list.py  test_recurrence_generation_resume.py  test_recurrence_lifecycle_effective_month.py
apps/compras_divididas/tests/performance/: test_reconciliation_benchmarks.py
apps/compras_divididas/tests/unit/: test_competence.py  test_error_handlers.py  test_mcp_server.py  test_message_parser.py  test_money.py  test_movement_service_create.py  test_recurrence_schedule.py  test_recurrence_service.py  test_refund_rules.py  test_settlement_service.py  test_transfer_instruction.py
(+79 files in other folders)
