[project]
name = "myproject"
version = "0.1.0"
requires-python = ">=3.12"
description = "Python Multi-Module Template"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
pythonpath = ["packages/common/src"]
addopts = "--tb=short -q --no-header --import-mode=importlib"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
