[project]
name = "compras-divididas"
version = "0.1.0"
requires-python = ">=3.12"
description = "Monthly reconciliation for shared purchases"
dependencies = [
    "alembic",
    "openai",
    "pydantic>=2",
    "pydantic-settings>=2",
    "psycopg[binary]>=3",
    "shared",
    "sqlalchemy>=2",
    "typer>=0.12",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compras_divididas"]
