[project]
name = "compras-divididas"
version = "0.1.0"
requires-python = ">=3.12"
description = "API para reconciliacao mensal de compras compartilhadas"
dependencies = [
    "fastapi>=0.116.0",
    "fastmcp>=2.14.4",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.44",
    "psycopg[binary]>=3.2.12",
    "alembic>=1.16.5",
    "typer>=0.16.1",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compras_divididas"]
